Fix Y overflow in html and body

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 
 /* NextUI overlay full height nad width */
 html, body {
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
